# by_your_command

./: CLAUDE.md  CMakeLists.txt  README.md  package.xml  setup.py
agents/: __init__.py
agents/common/: base_serializer.py  base_session_manager.py  debug_interface.py  websocket_bridge.py
agents/gemini_live/: __init__.py  gemini_live_agent.py  gemini_live_agent_new.py  gemini_live_agent_simple.py  gemini_serializer.py  gemini_session_manager.py  main.py  receive_coordinator.py  serializers.py
agents/oai_realtime/: __init__.py  conversation_monitor.py  debug_interface.py  main.py  oai_realtime_agent.py  oai_serializer.py  oai_session_manager.py  prompt_loader.py  serializers.py  session_manager.py  test_runtime_prompt_switching.py  websocket_bridge.py
audio/: audio_data_to_stamped.py  silero_vad_node.py  simple_audio_player.py  voice_chunk_recorder.py
audio_processing/: aec_node.py
bringup/: aec_test.launch.py  bringup.launch.py  byc.launch.py  gemini_dual_agent.launch.py  gemini_dual_agent_with_proxy.launch.py  gemini_live.launch.py  gemini_single.launch.py  gemini_vision.launch.py  oai_dual_agent.launch.py  oai_dual_agent_with_proxy.launch.py  oai_realtime.launch.py  test_reflection_proxy.launch.py
by_your_command/: __init__.py  audio_data_to_stamped.py  echo_suppressor.py  simple_audio_player.py
config/: bridge_dual_agent.yaml  bridge_dual_agent_blind.yaml  bridge_gemini_vision.yaml  config.yaml  gemini_command_agent.yaml  gemini_command_agent_proxy.yaml  gemini_conversation_agent.yaml  gemini_conversational_agent.yaml  gemini_conversational_agent_proxy.yaml  gemini_live_agent.yaml  oai_command_agent.yaml  oai_command_agent_proxy.yaml  oai_realtime_agent.yaml  oai_realtime_agent_proxy.yaml  prompts.yaml
devrules/: agentic_rules.md
docs/: prompt_architecture_diagrams.md
docs/diagrams/: dual.gml  dual_agent_processing.dot
nodes/: command_processor.py
ros_ai_bridge/: ros_ai_bridge.py  websocket_reflection_proxy.py
scripts/: setup_aec_debug.py  setup_aec_debug_dirs.sh
setup/: requirements.txt  setup.sh
silero_vad/: silero_vad_node.py  speech_only.py
specs/: acoustic_echo_cancellation_prd.md  context_management_enhancements_for_dual_agents_prd.md  gemini_live_direct_prd.md  gemini_live_pipecat_prd.md  multi_agent_prd.md  oai_realtime_prd.md  ros_ai_bridge_architecture.md  system_prd.md  utterance_enhancement_summary.md  voice_detection_prd.md
specs/analysis/: openai_gemini_api_mapping.md  wakeword_wakeword_partytime_excellent.md
specs/research/: foxglove-bridge-2025-09-15.txt  rosbridge_suite-2025-09-15.txt  rws-2025-09-15.txt
specs/sessions/: 2025-09-14-refactored-agent-topic-names.txt  2025-09-15-shared-context-proxy-in-progress.txt  2025-09-16-proxy-debugging.txt  2025-09-18-context-enhancement-phase4.txt  2025-09-24-oai-dual-with-proxy-fixes.txt  Silero VAD Node Refactoring and Debugging.md
tests/: debug_agent_state.py  debug_voice_active_flow.py  publish_command.py  test_command_processor.py  test_full_websocket_system.py  test_gemini_hybrid.py  test_gemini_with_image.py  test_proxy_connectivity.py  test_recorder_integration.py  test_refactored_components.py  test_repeated_clap_wake.py  test_sleep_clap_integration.py  test_utterance_chunks.py  test_vad_mute_control.py  test_websocket_bridge.py
tests/gemini/: README.md  test_audio_communication.py  test_frame_timing.py
voice_detection/: silero_vad_node.py  speech_chunk_recorder.py  voice_chunk_recorder.py
